result/subtask14-forall/testcase01.out
> Create symbol table (scope level 0)
func: mod
> Insert `mod` (addr: -1) to scope level 0
> Create symbol table (scope level 1)
> Insert `num` (addr: 0) to scope level 1
> Insert `mod` (addr: 1) to scope level 1
IDENT (name=num, address=0)
INT_LIT 0
LES
IF
> Create symbol table (scope level 2)
IDENT (name=num, address=0)
IDENT (name=num, address=0)
INT_LIT 1
NEG
MUL
IDENT (name=mod, address=-1)
DIV
INT_LIT 1
ADD
IDENT (name=mod, address=-1)
MUL
ADD
RETURN

> Dump symbol table (scope level: 2)
Index     Name                Type      Addr      Lineno    Func_sig  
IDENT (name=num, address=0)
IDENT (name=mod, address=-1)
REM
RETURN

> Dump symbol table (scope level: 1)
Index     Name                Type      Addr      Lineno    Func_sig  
0         num                 int       0         1         -         
1         mod                 int       1         1         -         
func: nothing_function
> Insert `nothing_function` (addr: 2) to scope level 0
> Create symbol table (scope level 1)
> Insert `s` (addr: 3) to scope level 1
IDENT (name=s, address=3)
IDENT (name=endl, address=-1)
cout string string
IDENT (name=mod, address=-1)
/home/share/hw2/input/subtask14-forall/testcase01.cpp:7:16: error:  syntax error
     7 |    cout << mod( 000000007,99824353) << endl; // very big number!
       |               ^
Total lines: 7
